[tool.poetry]
name = "pypi-cache"
version = "0.1.0"
description = "A pypi cache proxy"
authors = ["Olaf Gladis <olaf.gladis@trivago.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.14.1"
vibora = "^0.0.6"
sanic = "^20.9.1"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
