[tool.poetry]
name = "pypi-cache"
version = "0.1.0"
description = "A PyPI caching proxy"
authors = ["Olaf Gladis <olaf.gladis@trivago.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sanic = "*"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
